# zk-23

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/src/: lib.rs  main.rs  routes.rs
backend/src/config/: mod.rs
backend/src/db/: clickhouse.rs
backend/src/handlers/: alert.rs  auth.rs  data.rs  health.rs  ice_risk.rs  inspection.rs  mod.rs  sensor.rs  shutdown_strategy.rs  tower.rs  video.rs  weather.rs
backend/src/models/: alert.rs  ice_detection.rs  inspection.rs  mod.rs  sensor.rs  shutdown_strategy.rs  tower.rs  user.rs  vibration.rs  video.rs  weather.rs  wind_speed.rs
backend/src/mq/: mod.rs  nats_client.rs  publisher.rs  subscriber.rs
backend/src/services/: alert.rs  auth.rs  data_collection.rs  data_init.rs  ice_risk.rs  inspection.rs  mod.rs  sensor.rs  shutdown_strategy.rs  tower.rs  video.rs  weather_analysis.rs
backend/src/websocket/: mod.rs
deploy/clickhouse/: config.xml
deploy/nats/: nats.conf
deploy/nginx/: nginx.conf
deploy/nginx/conf.d/: cableway.conf
deploy/scripts/: backup.sh  healthcheck.sh  install.sh  restart.sh  start.sh  stop.sh
frontend/: Dockerfile  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: entry.client.tsx  entry.ssr.tsx  global.css  root.tsx
frontend/src/components/: BarChart.tsx  GaugeChart.tsx  LineChart.tsx  Modal.tsx  StatusBadge.tsx  TowerMap.tsx
frontend/src/routes/: index.tsx  layout.tsx
frontend/src/services/: api.ts  websocket.ts
frontend/src/stores/: auth.ts
frontend/src/types/: index.ts
(+10 files in other folders)
