[package]
name = "cableway-monitor"
version = "1.0.0"
edition = "2021"
description = "山地索道塔架振动结冰联动监测与停运决策平台"
authors = ["Cableway Monitor Team"]

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.4"
clickhouse = "0.12"
async-nats = "0.33"
redis = { version = "0.24", features = ["aio", "tokio-comp", "connection-manager"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
http = "1.0"
http-body-util = "0.1"
mime = "0.3"
multer = "3.0"
validator = { version = "0.16", features = ["derive"] }
bcrypt = "0.15"
jsonwebtoken = "9.2"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
dotenvy = "0.15"
config = "0.14"
clap = { version = "4.4", features = ["derive", "env"] }
ndarray = "0.15"
num-traits = "0.2"
algebra = "0.2"
statistical = "1.0"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
